--- a/client-react/src/pages/Archive.css
+++ b/client-react/src/pages/Archive.css
@@ -24,7 +24,7 @@
     flex-direction: row;
     padding: 20px;
     gap: 10px;
-    height: 40vh;
+    height: 60vh;
   }
 
 }
